less/bootstrap-theme/fab.less
//
// Floating Action Buttons
// --------------------------------------------------

.btn-group-fab-bottom-right {
    position: fixed;
    bottom: 22px;
    right: 40px;
    z-index: @zindex-fab-global;

    &.headroom {
        .transition(0.2s ease);
    }

    &.headroom--pinned {
        .transform(translateY(0));
    }

    &.headroom--unpinned {
        .transform(translateY(77px));
    }
}

.btn {
    &.btn-fab {
        border: none;
        height: 0;
        padding: 0 0 100% 0;
        min-width: 55px;
        line-height: 57px;
        font-size: @font-size-large;
        .border-top-radius(50%);
        .border-bottom-radius(50%);

        .btn-fab-icon-open {
            display: none;
        }

        &.btn-xs {
            min-width: 34px;
            line-height: 36px;
            font-size: ceil(@font-size-large * 34 / 55);
        }

        &.btn-sm {
            min-width: 46px;
            line-height: 48px;
            font-size: ceil(@font-size-large * 46 / 55);
        }

        &.btn-lg {
            min-width: 66px;
            line-height: 68px;
            font-size: ceil(@font-size-large * 66 / 55);
        }
    }
}

.open > .btn-fab {
    .btn-fab-icon-open {
        display: inline-block;

        + * {
            display: none;
        }
    }


}

.dropdown-menu {
    &.dropdown-fab {
        padding: 20px 0;

        border: none;
        min-width: 1px;
        .box-shadow(none);

        > li {
            padding: 5px 0;

            > a:after {
                display: none;
            }

            .fab-label {
                position: absolute;
                top: 5px; // the LI padding top
                left: 55px;
                white-space: nowrap;
                line-height: 57px;
                padding: 0 @fab-label-margin;
                font-weight: @fab-label-font-weight;
            }
        }

        &.fab-pull-right {
            > li {
                .fab-label {
                    left: auto;
                    right: 55px;
                    text-align: right;
                }
            }
        }
    }
}

.wrapper-dropdown-position-mask {
    &.wrapper-dropdown-fab.wrapper-mask-content {
        opacity: 0;
        z-index: (@zindex-navbar - 1) !important;
        .transition(opacity @transition);

        &.wrapper-open {
            opacity: @fab-mask-background-opacity;
        }
    }
}

.wrapper-dropdown-position {
    &.wrapper-dropdown-fab {
        overflow: visible;
        .scale(1);

        .dropdown-position-content,
        .scroller-content,
        .dropdown-fab {
            overflow: visible !important;
        }

        .dropdown-fab {
            .btn-fab,
            .fab-label {
                .transition-transform(.46s cubic-bezier(.4,0,.2,1));
                .scale(0);
            }

            .fab-label {
                .transform-origin(left center);
            }

            &.fab-pull-right {
                > li {
                    .fab-label {
                        .transform-origin(right center);
                    }
                }
            }

            > li {
                .transition-transform(.3s cubic-bezier(.4,0,.2,1));
                .transition-delay(100ms);
            }

            > li:nth-child(1) {
                .translate(0; 0);
            }

            > li:nth-child(2) {
                .translate(0; -65px);
            }

            > li:nth-child(3) {
                .translate(0; -130px);
            }

            > li:nth-child(4) {
                .translate(0; -195px);
            }

            > li:nth-child(5) {
                .translate(0; -260px);
            }

            > li:nth-child(6) {
                .translate(0; -325px);
            }
        }

        &.wrapper-dropup {
            .dropdown-fab {
                > li:nth-last-child(1) {
                    .translate(0; 0);
                }

                > li:nth-last-child(2) {
                    .translate(0; 65px);
                }

                > li:nth-last-child(3) {
                    .translate(0; 130px);
                }

                > li:nth-last-child(4) {
                    .translate(0; 195px);
                }

                > li:nth-last-child(5) {
                    .translate(0; 260px);
                }

                > li:nth-last-child(6) {
                    .translate(0; 325px);
                }
            }
        }

        &.wrapper-open {
            .dropdown-fab {
                .btn-fab,
                .fab-label {
                    .scale(1);
                }

                .fab-label{
                    .transition-delay(600ms);
                }

                > li:nth-child(1) {
                    .translate(0; 0);
                }

                > li:nth-child(2) {
                    .translate(0; 0);
                }

                > li:nth-child(3) {
                    .translate(0; 0);
                }

                > li:nth-child(4) {
                    .translate(0; 0);
                }

                > li:nth-child(5) {
                    .translate(0; 0);
                }

                > li:nth-child(6) {
                    .translate(0; 0);
                }
            }
        }
    }
}

@media (max-width: @screen-xs-max) {
    .btn-group-fab-bottom-right {
        right: 20px;
    }
}

